--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AMU APUS SVA Chapter</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles2.css"> <!-- Link to your external CSS file -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-
+    
 <style>
     /* Expandable Box Styles */
     .expandable-box {
@@ -460,52 +461,7 @@ body {
 
 
 
-<!-- Right Sidebar -->
-<div id="sidebar" class="fixed bottom-0 right-0 w-1/3 max-w-sm bg-gray-800 bg-opacity-90 backdrop-blur-lg shadow-xl z-50 rounded-t-lg overflow-hidden">
-    <!-- Header with Expand and Minimize Buttons -->
-    <div class="flex justify-between items-center bg-gray-700 p-2">
-        <!-- Container for buttons with no gap -->
-        <div class="flex space-x-2">
-            <!-- Expand Button -->
-            <button id="expandSidebar" class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700 transition duration-300">
-                Immediate Resources and Support
-            </button>
-            <!-- Minimize Button -->
-            <button id="minimizeSidebar" class="bg-red-600 text-white px-2 py-1 rounded hover:bg-red-700 transition duration-300">
-                Close
-            </button>
-        </div>
-    </div>
 
-    <!-- Sidebar Content -->
-    <div id="sidebarContent" class="p-4 overflow-hidden relative hidden">
-        <!-- Carousel Container -->
-        <div id="carousel" class="space-y-4">
-            <!-- Carousel Buttons with Floating Effects -->
-            <a href="https://www.va.gov/get-help-from-accredited-representative/find-rep/" 
-               target="_blank" 
-               class="carousel-item block bg-green-700 text-white px-4 py-2 rounded-lg hover:bg-green-800 transition duration-300 transform translate-x-0 opacity-0 animate-float">
-                Find A Local VSO Representative with VA.GOV
-            </a>
-            <a href="https://amusva.substack.com/chat" 
-               target="_blank" 
-               class="carousel-item block bg-red-600 text-white px-4 py-2 rounded-lg hover:bg-red-700 transition duration-300 transform translate-x-0 opacity-0 animate-float">
-                Request a Chat with Our Staff
-            </a>
-            <a href="https://www.militaryonesource.mil/" 
-               target="_blank" 
-               class="carousel-item block bg-white text-blue-600 px-4 py-2 rounded-lg hover:bg-gray-200 transition duration-300 transform translate-x-0 opacity-0 animate-float">
-                Military OneSource
-            </a>
-            <a href="https://www.veteranscrisisline.net/" 
-               target="_blank" 
-               class="carousel-item block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition duration-300 transform translate-x-0 opacity-0 animate-float">
-                The VA Crisis Hotline
-            </a>
-            <!-- Add more items as needed -->
-        </div>
-    </div>
-</div>
 
 <!-- JavaScript -->
 <script>
