--- a/index.html
+++ b/index.html
@@ -463,6 +463,36 @@ body {
 
 
 
+    <!-- Sidebar Content -->
+    <div id="sidebarContent" class="p-4 overflow-hidden relative hidden">
+        <!-- Carousel Container -->
+        <div id="carousel" class="space-y-4">
+            <!-- Carousel Buttons with Floating Effects -->
+            <a href="https://www.va.gov/get-help-from-accredited-representative/find-rep/" 
+               target="_blank" 
+               class="carousel-item block bg-green-700 text-white px-4 py-2 rounded-lg hover:bg-green-800 transition duration-300 transform translate-x-0 opacity-0 animate-float">
+                Find A Local VSO Representative with VA.GOV
+            </a>
+            <a href="https://amusva.substack.com/chat" 
+               target="_blank" 
+               class="carousel-item block bg-red-600 text-white px-4 py-2 rounded-lg hover:bg-red-700 transition duration-300 transform translate-x-0 opacity-0 animate-float">
+                Request a Chat with Our Staff
+            </a>
+            <a href="https://www.militaryonesource.mil/" 
+               target="_blank" 
+               class="carousel-item block bg-white text-blue-600 px-4 py-2 rounded-lg hover:bg-gray-200 transition duration-300 transform translate-x-0 opacity-0 animate-float">
+                Military OneSource
+            </a>
+            <a href="https://www.veteranscrisisline.net/" 
+               target="_blank" 
+               class="carousel-item block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition duration-300 transform translate-x-0 opacity-0 animate-float">
+                The VA Crisis Hotline
+            </a>
+            <!-- Add more items as needed -->
+        </div>
+    </div>
+</div>
+
 <!-- JavaScript -->
 <script>
     document.getElementById('expandSidebar').addEventListener('click', function () {
