--- a/index.html
+++ b/index.html
@@ -303,15 +303,14 @@ body {
 </section>
 
 
-
 <!-- About Section -->
 <section class="relative py-12 px-6 flex justify-between items-center" style="background-color: white;">
     <!-- Content Box with Dark Professional Ruby Red Background -->
     <div class="relative z-10 max-w-3xl p-8 mx-auto rounded-lg shadow-lg overflow-auto"
-        style="background: hsla(0, 76%, 39%, 0.775); height: 400px;">
+        style="background: hsla(0, 76%, 39%, 0.775); height: 400px; padding-top: 100px;">
 
         <!-- Tommy Image - Centered at the top inside the box -->
-        <img src="pic.tommy.png" alt="Tommy Image" class="absolute top-0 left-1/2 transform -translate-x-1/2 mt-4 z-10 w-32 h-32 object-cover rounded-full">
+        <img src="pic.tommy.png" alt="Tommy Image" class="absolute top-4 left-1/2 transform -translate-x-1/2 z-0 w-32 h-32 object-cover rounded-full">
 
         <h2 class="relative z-10 text-4xl font-semibold text-transparent bg-clip-text bg-gradient-to-r from-teal-500 to-blue-600 leading-tight drop-shadow-lg">
             AMU Student Veterans of America Chapter
@@ -326,10 +325,10 @@ body {
 <section class="relative py-12 px-6 flex justify-between items-center" style="background-color: white;">
     <!-- Content Box with Professional Gray Background -->
     <div class="relative z-10 max-w-3xl p-8 mx-auto rounded-lg shadow-lg overflow-auto"
-        style="background-color: #128e26; height: 400px;">
+        style="background-color: #128e26; height: 400px; padding-top: 100px;">
 
         <!-- Tommy Image - Centered at the top inside the box -->
-        <img src="student.png" alt="Tommy Image" class="absolute top-0 left-1/2 transform -translate-x-1/2 mt-4 z-10 w-32 h-32 object-cover rounded-full">
+        <img src="student.png" alt="Tommy Image" class="absolute top-4 left-1/2 transform -translate-x-1/2 z-0 w-32 h-32 object-cover rounded-full">
 
         <h2 class="relative z-10 text-4xl font-semibold text-transparent bg-clip-text bg-gradient-to-r from-teal-500 to-blue-600 leading-tight drop-shadow-lg">
             AMU Student Veterans of America Chapter
@@ -344,10 +343,10 @@ body {
 <section class="relative py-12 px-6 flex justify-between items-center" style="background-color: white;">
     <!-- Content Box with Dark Professional Ruby Red Background -->
     <div class="relative z-10 max-w-3xl p-8 mx-auto rounded-lg shadow-lg overflow-auto"
-        style="background: hwb(238 4% 11% / 0.775); height: 400px;">
+        style="background: hwb(238 4% 11% / 0.775); height: 400px; padding-top: 100px;">
 
         <!-- Tommy Image - Centered at the top inside the box -->
-        <img src="army.png" alt="Tommy Image" class="absolute top-0 left-1/2 transform -translate-x-1/2 mt-4 z-10 w-32 h-32 object-cover rounded-full">
+        <img src="army.png" alt="Tommy Image" class="absolute top-4 left-1/2 transform -translate-x-1/2 z-0 w-32 h-32 object-cover rounded-full">
 
         <h2 class="relative z-10 text-4xl font-semibold text-transparent bg-clip-text bg-gradient-to-r from-teal-500 to-blue-600 leading-tight drop-shadow-lg">
             AMU Student Veterans of America Chapter
@@ -462,36 +461,6 @@ body {
 
 
 
-
-    <!-- Sidebar Content -->
-    <div id="sidebarContent" class="p-4 overflow-hidden relative hidden">
-        <!-- Carousel Container -->
-        <div id="carousel" class="space-y-4">
-            <!-- Carousel Buttons with Floating Effects -->
-            <a href="https://www.va.gov/get-help-from-accredited-representative/find-rep/" 
-               target="_blank" 
-               class="carousel-item block bg-green-700 text-white px-4 py-2 rounded-lg hover:bg-green-800 transition duration-300 transform translate-x-0 opacity-0 animate-float">
-                Find A Local VSO Representative with VA.GOV
-            </a>
-            <a href="https://amusva.substack.com/chat" 
-               target="_blank" 
-               class="carousel-item block bg-red-600 text-white px-4 py-2 rounded-lg hover:bg-red-700 transition duration-300 transform translate-x-0 opacity-0 animate-float">
-                Request a Chat with Our Staff
-            </a>
-            <a href="https://www.militaryonesource.mil/" 
-               target="_blank" 
-               class="carousel-item block bg-white text-blue-600 px-4 py-2 rounded-lg hover:bg-gray-200 transition duration-300 transform translate-x-0 opacity-0 animate-float">
-                Military OneSource
-            </a>
-            <a href="https://www.veteranscrisisline.net/" 
-               target="_blank" 
-               class="carousel-item block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition duration-300 transform translate-x-0 opacity-0 animate-float">
-                The VA Crisis Hotline
-            </a>
-            <!-- Add more items as needed -->
-        </div>
-    </div>
-</div>
 
 <!-- JavaScript -->
 <script>
