--- a/index.html
+++ b/index.html
@@ -184,9 +184,11 @@ body {
             <div class="button bg-red-600 hover:bg-red-700 text-white p-4 flex justify-center items-center rounded shadow-lg cursor-pointer" onclick="window.open('https://www.va.gov/homeless/', '_blank')">
                 <span class="font-bold">VA Homeless Assistance</span>
             </div>
-            <div class="button bg-white hover:bg-gray-200 text-black p-4 flex justify-center items-center rounded shadow-lg cursor-pointer" onclick="window.open('https://www.sva.org/', '_blank')">
-                <span class="font-bold">SVA - Student Veterans</span>
-            </div>
+            <div class="bg-white hover:bg-gray-100 text-black p-4 flex flex-col items-center justify-center rounded-lg shadow-lg cursor-pointer transition-transform transform hover:scale-105"
+            onclick="window.open('https://www.va.gov/disability/compensation-rates/veteran-rates/', '_blank')">
+           <span class="text-lg font-semibold text-teal-600 mb-2">VA Benefits Calculator</span>
+           <span class="text-sm font-medium text-gray-500">Courtesy: Jason David, CMSgt, USAF (ret.)</span>
+       </div>
         </div>
 <body>
 
